--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>vitin fagabundo</title>
+</head>
+<body>
+    <main>
+        <div class="passo ativo" id="passo-0">
+            <p>Era uma vez...</p>
+            <button class="btn-proximo" data-proximo="1">vitinho 1</button>
+            <button class="btn-proximo" data-proximo="2">vitinho 2</button>
+        </div>
+        <div class="passo ativo" id="passo-0">
+            <p>Era uma vez...</p>
+            <button class="btn-proximo" data-proximo="3">vitinho 1</button>
+            <button class="btn-proximo" data-proximo="4">vitinho 2</button>
+        </div>
+    </main>
+</body>
+</html>
